# genesis-zero-bot

./: .gitignore  BACKUP-MANIFEST.txt  README.md  REPO-MANIFEST.json  RNF_Complete_Framework_Structure.md  SOUL.md  SPEC-chain-stories-update.md  SPEC.md  USER.md  append_sections.py  civilization-integral-aisystant-synthesis.md  civilization-stack-SECF-assessment.md  civilization-stack-ground-zero-v2.md  civilization-stack-ground-zero.md  civilization-stack-remaining.md  civilization-zero-to-transcendence.md  exclude-patterns.txt  first-principles-public.md  index.html  integral-rollout-simulation-v1.md  main.jsx  package-lock.json  package.json  rewritenotes.py  secf_part2.txt  send-all-docs.sh  send_survival.py  skills_bullshit.json  skills_sh_all.json  skills_sh_scraper.py  skills_valuable.json  split_incose.py  split_incose_subchapters.py  telegram-compose-payload.json  temp_message.json  tmp_send.sh  world-map.html  write_secf.py
.ralph/: current-events  (+4 more)
projects/affinity-mapping-engine/: Cargo.toml
projects/affinity-mapping-engine/src/: main.rs  seed.rs
projects/affinity-mapping-engine/src/anti_capture/: living_membrane.rs  mod.rs  sacred_clown.rs  v_crystal.rs  y_cards.rs
projects/affinity-mapping-engine/src/api/: handlers.rs  mod.rs  routes.rs
projects/affinity-mapping-engine/src/models/: affinity.rs  member.rs  mod.rs  semantic.rs  trust.rs
projects/affinity-mapping-engine/src/scoring/: engine.rs  mod.rs
projects/affinity-mapping-engine/src/trust/: mod.rs  processor.rs  timelock.rs
projects/affinity-mapping-engine/src/ws/: mod.rs  server.rs
(+1502 files in other folders)
