[package]
name = "affinity_mapping_engine"
version = "0.1.0"
edition = "2024"
description = "Affinity Mapping Engine for regenerative communities - peptide-like semantic networks mapping needs, beliefs, principles, and values"
license = "MIT"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tungstenite = "0.24"
tokio-tungstenite = "0.24"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
proptest = "1"
actix-rt = "2"
actix-test = "0.1"

[profile.release]
lto = true
opt-level = "z"
strip = true
